--- a/apps/docs/pages/faq.en.mdx
+++ b/apps/docs/pages/faq.en.mdx
@@ -18,45 +18,18 @@ export function FAQBox({ title, children }) {
   issue](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Bug&labels=bugs).
 </FAQBox>
 <FAQBox title="How can I suggest improvements for the site?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="Can I invite the data.gov.my team to give a talk?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="Is the site’s content officially shared anywhere else?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="What is the meaning of life?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
+  For improvement suggestions, visit our GitHub repository and [open a new
+  issue](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Improvement&labels=improvement).
 </FAQBox>
 
 ## Data & Tech
 
-<FAQBox FAQBox title="Why don’t you have a data request page yet?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
 <FAQBox title="Can I really use all the data here for free?">
-  Yes, you can use the data available on our platform for free, as it's part of our commitment to
+  This data is made open under the Creative Commons Attribution 4.0 International License (CC BY
+  4.0). You can use the data available on our platform for free as it's part of our commitment to
   open data. We encourage users to explore, analyze, and utilize the data to drive innovation and
   insights.
 </FAQBox>
 <FAQBox title="Could you share how this site was built?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="Can my non-government agency share data here?">
-  While our primary focus is on government-related data, we are open to collaborations. Please
-  contact us at [data.dtsa@mampu.gov.my](mailto:data.dtsa@mampu.gov.my) to discuss the possibility
-  of sharing data from your non-government agency.
+  [Seeing is better than sharing.](https://github.com/data-gov-my/datagovmy-openapi)
 </FAQBox>
